objects/DandB_FileNote__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_FileNote</relationshipLabel>
        <relationshipName>DandB_FileNote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>day__c</fullName>
        <label>day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fnType__c</fullName>
        <label>fnType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>month__c</fullName>
        <label>month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <label>year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DandB_FileNote</label>
    <nameField>
        <label>DandB_FileNote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_FileNote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>